Login function testing added using JSON